--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-page",
   "version": "0.1.0",
-  "homepage": "https://github.com/nvmle/personal_page_TakeoffStaf",
+  "homepage": "https://nvmle.github.io/personal_page_TakeoffStaf/",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
